fix: preserve compatibility after main rebase