@@ -1,5 +1,7 @@
 package com.foggyframework.dataset.db.model.semantic.port;
 
+import java.util.Collections;
+import java.util.LinkedHashMap;
 import java.util.Map;
 
 /** DTO-only request accepted by the model-side Compose execution boundary. */
@@ -14,7 +16,9 @@ public record ComposeExecutionRequest(
 ) {
     public ComposeExecutionRequest {
         operation = operation == null ? ComposeOperation.EXECUTE : operation;
-        params = params == null ? Map.of() : Map.copyOf(params);
+        params = params == null
+                ? Map.of()
+                : Collections.unmodifiableMap(new LinkedHashMap<>(params));
         if (caller == null) {
             throw new IllegalArgumentException("ComposeExecutionRequest.caller is required");
         }
